Fix Chapter 1 foreword

--- a/001.md
+++ b/001.md
@@ -7,25 +7,25 @@ around Chapter 5. If you still don't like it after Chapter 10, give up.
 **Please visit HPMOR DOT COM for:**
 
 \* Easy email notification system, RSS feed, and Twitter feed for new
-chapters;\
- \* Current Author's Notes and progress updates;\
- \* Lovely fan-made book-style PDF version;\
- \* Ad-free mirror of the text;\
- \* ePUB and MOBI e-texts;\
- \* Ongoing podcast of the story;\
- \* Fan art in vast quantities;\
- \* Cameo list (characters named after fan artists);\
- \* Fan-fanfiction of this fanfiction;\
- \* Fan music, songs, and animations;\
- \* Fan translations;\
- \* The OKCupid keyword for HPMOR readers;\
- \* Links to TV Tropes page and discussion forum;\
- \* Trigger warnings page (warnings about possible traumatic
+chapters;  
+\* Current Author's Notes and progress updates;  
+\* Lovely fan-made book-style PDF version;  
+\* Ad-free mirror of the text;  
+\* ePUB and MOBI e-texts;  
+\* Ongoing podcast of the story;  
+\* Fan art in vast quantities;  
+\* Cameo list (characters named after fan artists);  
+\* Fan-fanfiction of this fanfiction;  
+\* Fan music, songs, and animations;  
+\* Fan translations;  
+\* The OKCupid keyword for HPMOR readers;  
+\* Links to TV Tropes page and discussion forum;  
+\* Trigger warnings page (warnings about possible traumatic
 associations for some readers; to avoid spoilers for most readers, there
-are *no* warnings inside the main story);\
- \* How to learn everything the main character knows;\
- \* Open job positions at a related nonprofit;\
- \* And ever so much more.
+are *no* warnings inside the main story);  
+\* How to learn everything the main character knows;  
+\* Open job positions at a related nonprofit;  
+\* And ever so much more.
 
 Reviews make me happy. You can leave reviews on any chapter, no login
 required, and there's no need to finish reading it all before you start
