--- a/001.md
+++ b/001.md
@@ -153,7 +153,7 @@ Petunia wrung her hands. She seemed to be on the verge of tears. "My
 love, I know I can't win arguments with you, but please, you have to
 trust me on this —"
 
-" *Dad! Mum!* "
+"*Dad! Mum!*"
 
 The two of them stopped and looked at Harry as though they'd forgotten
 there was a third person in the room.
@@ -266,36 +266,36 @@ testable hypothesis is to go and test it.
 
 He took a piece of lined paper from his desk, and started writing.
 
-*Dear Deputy Headmistress*
+> *Dear Deputy Headmistress*
 
 Harry paused, reflecting; then discarded the paper for another, tapping
 another millimetre of graphite from his mechanical pencil. This called
 for careful calligraphy.
 
-*Dear Deputy Headmistress Minerva McGonagall,*
-
-*Or Whomsoever It May Concern:*
-
-*I recently received your letter of acceptance to Hogwarts, addressed to
-Mr. H. Potter. You may not be aware that my genetic parents, James
-Potter and Lily Potter (formerly Lily Evans) are dead. I was adopted by
-Lily's sister, Petunia Evans-Verres, and her husband, Michael
-Verres-Evans.*
-
-*I am extremely interested in attending Hogwarts, conditional on such a
-place actually existing. Only my mother Petunia says she knows about
-magic, and she can't use it herself. My father is highly sceptical. I
-myself am uncertain. I also don't know where to obtain any of the books
-or equipment listed in your acceptance letter.*
-
-*Mother mentioned that you sent a Hogwarts representative to Lily Potter
-(then Lily Evans) in order to demonstrate to her family that magic was
-real, and, I presume, help Lily obtain her school materials. If you
-could do this for my own family it would be extremely helpful.*
-
-*Sincerely,*
-
-*Harry James Potter-Evans-Verres.*
+> *Dear Deputy Headmistress Minerva McGonagall,*
+> 
+> *Or Whomsoever It May Concern:*
+> 
+> *I recently received your letter of acceptance to Hogwarts, addressed to
+> Mr. H. Potter. You may not be aware that my genetic parents, James
+> Potter and Lily Potter (formerly Lily Evans) are dead. I was adopted by
+> Lily's sister, Petunia Evans-Verres, and her husband, Michael
+> Verres-Evans.*
+> 
+> *I am extremely interested in attending Hogwarts, conditional on such a
+> place actually existing. Only my mother Petunia says she knows about
+> magic, and she can't use it herself. My father is highly sceptical. I
+> myself am uncertain. I also don't know where to obtain any of the books
+> or equipment listed in your acceptance letter.*
+> 
+> *Mother mentioned that you sent a Hogwarts representative to Lily Potter
+> (then Lily Evans) in order to demonstrate to her family that magic was
+> real, and, I presume, help Lily obtain her school materials. If you
+> could do this for my own family it would be extremely helpful.*
+> 
+> *Sincerely,*
+> 
+> *Harry James Potter-Evans-Verres.*
 
 Harry added their current address, then folded up the letter and put it
 in an envelope, which he addressed to Hogwarts. Further consideration
@@ -372,7 +372,7 @@ silly theory —"
 
 "Did you get your acceptance letter from Hogwarts?"
 
-Harry froze in place *.*
+Harry froze in place*.*
 
 "Yes," Harry's lips said a little while later. "I got a letter from
 Hogwarts. They say they want my owl by the 31st of July, but —"
