More formatting cleanup for 1 – 6

--- a/001.md
+++ b/001.md
@@ -182,7 +182,7 @@ Calling out *Letter for Hogwarts!* while holding an envelope high in the air in 
 
 “Letter —” Harry said, but it actually came out as more of a whispered croak.
 
-Harry steeled his will, and shouted into the empty sky, “*Letter for Hogwarts! Can I get an owl?*”
+Harry steeled his will, and shouted into the empty sky, *“Letter for Hogwarts! Can I get an owl?”*
 
 “Harry?” asked a bemused woman’s voice, one of the neighbours.
 
