--- a/002.md
+++ b/002.md
@@ -28,13 +28,13 @@ Then Professor Verres-Evans looked back at Professor McGonagall. “All right, y
 
 His father was lowered carefully to the ground.
 
-Harry ruffled a hand through his own hair. Maybe it was just that strange part of him which had *already* been convinced, but... “That’s a bit of an anticlimax,” Harry said. “You’d think there’d be some kind of more dramatic mental event associated with updating on an observation of infinitesimal probability —” Harry stopped himself. Mum, the witch, and even his Dad were giving him *that look* again. “I mean, with finding out that everything I believe is false.”
+Harry ruffled a hand through his own hair. Maybe it was just that strange part of him which had *already* been convinced, but… “That’s a bit of an anticlimax,” Harry said. “You’d think there’d be some kind of more dramatic mental event associated with updating on an observation of infinitesimal probability —” Harry stopped himself. Mum, the witch, and even his Dad were giving him *that look* again. “I mean, with finding out that everything I believe is false.”
 
 Seriously, it should have been more dramatic. His brain ought to have been flushing its entire current stock of hypotheses about the universe, none of which allowed this to happen. But instead his brain just seemed to be going, *All right, I saw the Hogwarts Professor wave her wand and make your father rise into the air, now what?*
 
 The witch-lady was smiling benevolently upon them, looking quite amused. “Would you like a further demonstration, Mr. Potter?”
 
-“You don’t have to,” Harry said. “We've performed a definitive experiment. But...” Harry hesitated. He couldn’t help himself. Actually, under the circumstances, he *shouldn’t* be helping himself. It was right and proper to be curious. “What else *can* you do?”
+“You don’t have to,” Harry said. “We've performed a definitive experiment. But…” Harry hesitated. He couldn’t help himself. Actually, under the circumstances, he *shouldn’t* be helping himself. It was right and proper to be curious. “What else *can* you do?”
 
 Professor McGonagall turned into a cat.
 
@@ -52,7 +52,7 @@ Professor McGonagall’s lips were twitching harder now. “Magic.”
 
 “Magic *isn’t enough* to do that! You’d have to be a god!”
 
-Professor McGonagall blinked. “That’s the first time I've ever been called *that.*“
+Professor McGonagall blinked. “That’s the first time I've ever been called *that.*”
 
 A blur was coming over Harry’s vision, as his brain started to comprehend what had just broken. The whole idea of a unified universe with mathematically regular laws, that was what had been flushed down the toilet; the whole notion of *physics*. Three thousand years of resolving big complicated things into smaller pieces, discovering that the music of the planets was the same tune as a falling apple, finding that the true laws were perfectly universal and had no exceptions anywhere and took the form of simple maths governing the smallest parts, *not to mention* that the mind was the brain and the brain was made of neurons, a brain was what a person *was* —
 
@@ -74,7 +74,7 @@ Professor McGonagall spun to face Michael. “His condition? What’s this?”
 
 “One of the reasons,” said his mother. Harry shot her a glare.
 
-McGonagall gave a long *hmmmmm.* “I can’t recall hearing about such a condition before...” she said slowly. “I’ll check with Madam Pomfrey to see if she knows any remedies.” Then her face brightened. “No, I’m sure this won’t be a problem — I’ll find a solution in time. Now,” and her gaze sharpened again, “what are these *other* reasons?”
+McGonagall gave a long *hmmmmm.* “I can’t recall hearing about such a condition before…” she said slowly. “I’ll check with Madam Pomfrey to see if she knows any remedies.” Then her face brightened. “No, I’m sure this won’t be a problem — I’ll find a solution in time. Now,” and her gaze sharpened again, “what are these *other* reasons?”
 
 Harry sent his parents a glare. “I am a conscientious objector to child conscription, on grounds that I should not have to suffer for a disintegrating school system’s failure to provide teachers or study materials of even minimally adequate quality.”
 
