--- a/003.md
+++ b/003.md
@@ -12,7 +12,7 @@ Harry leaned towards the bar of the Leaky Cauldron as best he could, though it c
 
 “Am I — could I be — maybe — you never know — if I'm *not* — but then the question is — *who?”*
 
-“Bless my soul,” whispered the old barman. “Harry Potter... what an honour.”
+“Bless my soul,” whispered the old barman. “Harry Potter… what an honour.”
 
 Harry blinked, then rallied. “Well, yes, you’re quite perceptive; most people don’t realise that so quickly —”
 
@@ -36,25 +36,25 @@ They left the bar without any trouble.
 
 “Hm?” said Professor McGonagall, sounding a bit surprised; perhaps she hadn’t expected that question either. “That was Professor Quirinus Quirrell. He’ll be teaching Defence Against the Dark Arts this year at Hogwarts.”
 
-“I had the strangest feeling that I knew him...” Harry rubbed his forehead. “And that I shouldn’t ought to shake his hand.” Like meeting someone who had been a friend, once, before something went drastically wrong... that wasn’t really it at all, but Harry couldn’t find words. “And what *was...* all of that?”
+“I had the strangest feeling that I knew him…” Harry rubbed his forehead. “And that I shouldn’t ought to shake his hand.” Like meeting someone who had been a friend, once, before something went drastically wrong… that wasn’t really it at all, but Harry couldn’t find words. “And what *was…* all of that?”
 
-Professor McGonagall was giving him an odd glance. “Mr. Potter... do you know... how *much* have you been told... about how your parents died?”
+Professor McGonagall was giving him an odd glance. “Mr. Potter… do you know… how *much* have you been told… about how your parents died?”
 
 Harry returned a steady look. “My parents are alive and well, and they always refused to talk about how my *genetic* parents died. From which I infer that it wasn’t good.”
 
 “An admirable loyalty,” said Professor McGonagall. Her voice went low. “Though it hurts a little to hear you say it like that. Lily and James were friends of mine.”
 
-Harry looked away, suddenly ashamed. “I'm sorry,” he said in a small voice. “But I *have* a Mum and Dad. And I know that I’d just make myself unhappy by comparing that reality to... something perfect that I built up in my imagination.”
+Harry looked away, suddenly ashamed. “I'm sorry,” he said in a small voice. “But I *have* a Mum and Dad. And I know that I’d just make myself unhappy by comparing that reality to… something perfect that I built up in my imagination.”
 
 “That is amazingly wise of you,” Professor McGonagall said quietly. “But your *genetic* parents died very well indeed, protecting you.”
 
 *Protecting me?*
 
-Something strange clutched at Harry’s heart. “What... *did* happen?”
+Something strange clutched at Harry’s heart. “What… *did* happen?”
 
-Professor McGonagall sighed. Her wand tapped Harry’s forehead, and his vision blurred for a moment. “Something of a disguise,” she said, “so that this doesn’t happen again, not until you’re ready.” Then her wand licked out again, and tapped three times on a brick wall...
+Professor McGonagall sighed. Her wand tapped Harry’s forehead, and his vision blurred for a moment. “Something of a disguise,” she said, “so that this doesn’t happen again, not until you’re ready.” Then her wand licked out again, and tapped three times on a brick wall…
 
-...which hollowed into a hole, and dilated and expanded and shivered into a huge archway, revealing a long row of shops with signs advertising cauldrons and dragon livers.
+…which hollowed into a hole, and dilated and expanded and shivered into a huge archway, revealing a long row of shops with signs advertising cauldrons and dragon livers.
 
 Harry didn’t blink. It wasn’t like anyone was turning into a cat.
 
@@ -78,7 +78,7 @@ Harry blinked, then realised what he’d just done. “I'm sorry! I forgot for a
 
 Harry nodded, and they walked on.
 
-“Don’t get me wrong, it’s a *great* distraction,” Harry said as his head kept swivelling, “probably the best distraction anyone has ever tried on me, but don’t think I've forgotten about our pending discussion.”
+“Don’t get me wrong, it’s a *great* distraction,” Harry said as his head kept swivelling, “probably the best distraction anyone has ever tried on me, but don’t think I’ve forgotten about our pending discussion.”
 
 Professor McGonagall sighed. “Your parents — or your mother at any rate — may have been very wise not to tell you.”
 
