--- a/006.md
+++ b/006.md
@@ -3,11 +3,11 @@ Blah blah disclaimer blah blah Rowling blah blah ownership.
 A/N: The “Aftermath” section of this chapter is part of the story, *not*
 omake.
 
-* * * * *
+--------
 
 *You think your day was surreal? Try mine.*
 
-* * * * *
+--------
 
 *Some* children would have waited until *after* their first trip to Diagon Alley.
 
@@ -25,7 +25,7 @@ Harry James Potter-Evans-Verres had gotten his hands on at least one magical ite
 
 “Professor McGonagall,” Harry said to the bemused witch strolling beside him, “can you give me two words, one word for gold, and one word for something else that isn’t money, in a language that I wouldn’t know? But don’t tell me which is which.”
 
-“*Ahava* and *zahav,*” said Professor McGonagall. “That’s Hebrew, and the other word means love.”
+*“Ahava* and *zahav,*” said Professor McGonagall. “That’s Hebrew, and the other word means love.”
 
 “Thank you, Professor. Bag of *ahava.*” Empty.
 
@@ -50,22 +50,20 @@ The black-robed witch laughed aloud. “But it *is* magic, Mr. Potter.”
 
 Harry slumped over a little. “With respect, Professor McGonagall, I’m not quite sure you understand what I’m trying to do here.”
 
-“With respect, Mr. Potter, I’m quite sure I don’t. Unless — this is just a guess, mind — you're trying to take over the world?”
+“With respect, Mr. Potter, I’m quite sure I don’t. Unless — this is just a guess, mind — you’re trying to take over the world?”
 
 “No! I mean yes — well, *no!”*
 
 “I think I should perhaps be alarmed that you have trouble answering the question.”
 
-Harry glumly considered the Dartmouth Conference on Artificial
-Intelligence in 1956. It had been the first conference ever on the topic, the one that had coined the phrase “Artificial Intelligence.” They had identified key problems such as making computers understand language, learn, and improve themselves. They had suggested, in perfect seriousness, that significant advances on these problems might be made by ten scientists working together for two months.
+Harry glumly considered the Dartmouth Conference on Artificial Intelligence in 1956. It had been the first conference ever on the topic, the one that had coined the phrase “Artificial Intelligence.” They had identified key problems such as making computers understand language, learn, and improve themselves. They had suggested, in perfect seriousness, that significant advances on these problems might be made by ten scientists working together for two months.
 
-*No. Chin up. You're just* starting *on the problem of unravelling all the secrets of magic. You don’t actually* know *whether it’s going to be too difficult to do in two months.*
+*No. Chin up. You’re just* starting *on the problem of unravelling all the secrets of magic. You don’t actually* know *whether it’s going to be too difficult to do in two months.*
 
 “And you *really* haven’t heard of other wizards asking these sorts of questions or doing this sort of scientific experimenting?” Harry asked again. It just seemed so *obvious* to him.
 
 Then again, it’d taken more than two hundred years *after* the invention of the scientific method before any Muggle scientists had thought to systematically investigate which sentences a *human four-year-old* could or couldn’t understand. The developmental psychology of linguistics could’ve been discovered in the eighteenth century, in principle, but no one had even thought to look until the twentieth. So you couldn’t really
-blame the much smaller wizarding world for not investigating the
-Retrieval Charm.
+blame the much smaller wizarding world for not investigating the Retrieval Charm.
 
 Professor McGonagall pursed her lips, then shrugged. “I’m still not sure what you mean by ’scientific experimenting', Mr. Potter. As I said, I’ve seen Muggleborn students try to get Muggle science to work inside Hogwarts, and people invent new Charms and Potions every year.”
 
@@ -73,7 +71,7 @@ Harry shook his head. “Technology isn’t the same thing as science at all. An
 
 “Perhaps ten or so?”
 
-Harry missed a step and almost tripped over his own feet. “*Ten?”*
+Harry missed a step and almost tripped over his own feet. *“Ten?”*
 
 The Muggle world had a population of six billion and counting. If you were one in a million, there were seven of you in London and a thousand more in China. It was inevitable that the Muggle population would produce *some* eleven-year-olds who could do calculus — Harry knew he wasn’t the only one. He’d met other prodigies in mathematical competitions. In fact he’d been thoroughly trounced by competitors who probably spent literally *all day* practising maths problems and who’d *never* read a science-fiction book and who would burn out *completely*
 before *puberty* and *never* amount to *anything* in their future lives because they’d just practised *known* techniques instead of learning to think *creatively*. (Harry was something of a sore loser.)
@@ -86,8 +84,7 @@ Professor McGonagall undoubtedly knew every last detail of how you went about tu
 
 That left two possibilities, really.
 
-Possibility one: Magic was so incredibly opaque, convoluted, and
-impenetrable, that even though wizards and witches had tried their best to understand, they’d made little or no progress and eventually given up; and Harry would do no better.
+Possibility one: Magic was so incredibly opaque, convoluted, and impenetrable, that even though wizards and witches had tried their best to understand, they’d made little or no progress and eventually given up; and Harry would do no better.
 
 *Or…*
 
@@ -101,18 +98,15 @@ That sort of thing *did* sometimes take longer than two months. Muggle science h
 
 But Harry still couldn’t stop the huge smile that was stretching his cheeks so wide they were starting to hurt.
 
-Harry had always been frightened of ending up as one of those child prodigies that never amounted to anything and spent the rest of their lives boasting about how far ahead they’d been at age ten. But then most adult geniuses never amounted to anything either. There were probably a thousand people as intelligent as Einstein for every actual Einstein in history. Because those other geniuses hadn’t gotten their hands on the one thing you absolutely needed to achieve greatness. They’d never found
-an important problem.
+Harry had always been frightened of ending up as one of those child prodigies that never amounted to anything and spent the rest of their lives boasting about how far ahead they’d been at age ten. But then most adult geniuses never amounted to anything either. There were probably a thousand people as intelligent as Einstein for every actual Einstein in history. Because those other geniuses hadn’t gotten their hands on the one thing you absolutely needed to achieve greatness. They’d never found an important problem.
 
-*You're mine now,* Harry thought at the walls of Diagon Alley, and all the shops and items, and all the shopkeepers and customers; and all the lands and people of wizarding Britain, and all the wider wizarding world; and the entire greater universe of which Muggle scientists understood so much less than they believed. *I, Harry James Potter-Evans-Verres, do now claim this territory in the name of Science.*
+*You’re mine now,* Harry thought at the walls of Diagon Alley, and all the shops and items, and all the shopkeepers and customers; and all the lands and people of wizarding Britain, and all the wider wizarding world; and the entire greater universe of which Muggle scientists understood so much less than they believed. *I, Harry James Potter-Evans-Verres, do now claim this territory in the name of Science.*
 
-Lightning and thunder completely failed to flash and boom in the
-cloudless skies.
+Lightning and thunder completely failed to flash and boom in the cloudless skies.
 
 “What are you smiling about?” inquired Professor McGonagall, warily and wearily.
 
-“I’m wondering if there’s a spell to make lightning flash in the
-background whenever I make an ominous resolution,” explained Harry. He was carefully memorising the exact words of his ominous resolution so that future history books would get it right.
+“I’m wondering if there’s a spell to make lightning flash in the background whenever I make an ominous resolution,” explained Harry. He was carefully memorising the exact words of his ominous resolution so that future history books would get it right.
 
 “I have the distinct feeling that I ought to be doing something about this,” sighed Professor McGonagall.
 
@@ -182,8 +176,7 @@ Harry heard the salesgirl gasp, and he looked up to see her staring at him with 
 
 Professor McGonagall reached down, and took Harry’s hand in hers, gently but firmly, and pulled Harry out of the main street of Diagon Alley, leading him into an alleyway between two shops which was paved in dirty bricks and dead-ended in a wall of solid black dirt.
 
-The tall witch pointed her wand at the main street and spoke,
-*“Quietus*” she said, and a screen of silence descended around them, blocking out all the street noises.
+The tall witch pointed her wand at the main street and spoke, *“Quietus*” she said, and a screen of silence descended around them, blocking out all the street noises.
 
 *What did I do wrong…*
 
@@ -207,12 +200,11 @@ Harry wanted to just run away. He wanted to pull out a wand and erase the whole 
 
 “So I can stop it from happening!”
 
-“Mr. Potter…” the older witch’s voice trailed off. Then she sighed, and knelt down beside him. “Mr. Potter,” she said, gently now, “it’s not your responsibility to take care of the students at Hogwarts. It’s mine. I won’t let anything bad happen to you or anyone else. Hogwarts is the safest place for magical children in all the wizarding world, and Madam Pomfrey has a full healer’s office. You won’t need a healer’s kit at
-all, let alone a five-Galleon one.”
+“Mr. Potter…” the older witch’s voice trailed off. Then she sighed, and knelt down beside him. “Mr. Potter,” she said, gently now, “it’s not your responsibility to take care of the students at Hogwarts. It’s mine. I won’t let anything bad happen to you or anyone else. Hogwarts is the safest place for magical children in all the wizarding world, and Madam Pomfrey has a full healer’s office. You won’t need a healer’s kit at all, let alone a five-Galleon one.”
 
-“But I *do!”* Harry burst out. “*Nowhere* is perfectly safe! And what if my parents have a heart attack or get in an accident when I go home for Christmas — Madam Pomfrey won’t be there, I’ll need a healer’s kit of my own —”
+“But I *do!”* Harry burst out. *“Nowhere* is perfectly safe! And what if my parents have a heart attack or get in an accident when I go home for Christmas — Madam Pomfrey won’t be there, I’ll need a healer’s kit of my own —”
 
-“*What* in Merlin’s name…” Professor McGonagall said. She stood up, and looked down at Harry an expression torn between annoyance and concern. “There’s no need to think about such terrible things, Mr. Potter!”
+*“What* in Merlin’s name…” Professor McGonagall said. She stood up, and looked down at Harry an expression torn between annoyance and concern. “There’s no need to think about such terrible things, Mr. Potter!”
 
 Harry’s expression twisted up into bitterness, hearing that. “Yes there *is!* If you don’t think, you don’t just get hurt yourself, you end up hurting other people!”
 
@@ -220,9 +212,9 @@ Professor McGonagall opened her mouth, then closed it. The witch rubbed the brid
 
 “About what?”
 
-“About why you're convinced you must always be on your guard against terrible things happening to you.”
+“About why you’re convinced you must always be on your guard against terrible things happening to you.”
 
-Harry stared at her in puzzlement. That was a self-evident axiom. “Well…” Harry said slowly. He tried to organise his thoughts. How *could* he explain himself to a Professor-witch, when she didn’t even know the basics? “Muggle researchers have found that people are always very optimistic, compared to reality. Like they say something will take two days and it takes ten days, or they say it’ll take two months and it takes over thirty-five years. For example, in one experiment, they asked students for times by which they were 50% sure, 75% sure, and 99% sure they’d complete their homework, and only 13%, 19%, and 45% of the students finished by those times. And they found that the reason was that when they asked one group for their best-case estimates if everything went as well as possible, and another group for their average-case estimates if everything went as usual, they got back answers that were statistically indistinguishable. See, if you ask someone what they expect in the *normal* case, they visualise what looks like the line of maximum probability at each step along the way — everything going according to plan, with no surprises. But actually, since more than half the students didn’t finish by the time they were 99% sure they’d be done, reality usually delivers results a little worse than the ‘worst-case scenario'. It’s called the planning fallacy, and the best way to fix it is to ask how long things took the last time you tried them. That’s called using the outside view instead of the inside view. But when you're doing something new and can’t do that, you just have to be really, really, really pessimistic. Like, so pessimistic that reality actually comes out *better* than you expected around as often and as much as it comes out worse. It’s actually *really hard* to be *so* pessimistic that you stand a decent chance of *undershooting* real life. Like I make this big effort to be gloomy and I imagine one of my classmates getting bitten, but what actually happens is that the surviving Death Eaters attack the whole school to get at me. But on a happier note —”
+Harry stared at her in puzzlement. That was a self-evident axiom. “Well…” Harry said slowly. He tried to organise his thoughts. How *could* he explain himself to a Professor-witch, when she didn’t even know the basics? “Muggle researchers have found that people are always very optimistic, compared to reality. Like they say something will take two days and it takes ten days, or they say it’ll take two months and it takes over thirty-five years. For example, in one experiment, they asked students for times by which they were 50% sure, 75% sure, and 99% sure they’d complete their homework, and only 13%, 19%, and 45% of the students finished by those times. And they found that the reason was that when they asked one group for their best-case estimates if everything went as well as possible, and another group for their average-case estimates if everything went as usual, they got back answers that were statistically indistinguishable. See, if you ask someone what they expect in the *normal* case, they visualise what looks like the line of maximum probability at each step along the way — everything going according to plan, with no surprises. But actually, since more than half the students didn’t finish by the time they were 99% sure they’d be done, reality usually delivers results a little worse than the ‘worst-case scenario'. It’s called the planning fallacy, and the best way to fix it is to ask how long things took the last time you tried them. That’s called using the outside view instead of the inside view. But when you’re doing something new and can’t do that, you just have to be really, really, really pessimistic. Like, so pessimistic that reality actually comes out *better* than you expected around as often and as much as it comes out worse. It’s actually *really hard* to be *so* pessimistic that you stand a decent chance of *undershooting* real life. Like I make this big effort to be gloomy and I imagine one of my classmates getting bitten, but what actually happens is that the surviving Death Eaters attack the whole school to get at me. But on a happier note —”
 
 “Stop,” said Professor McGonagall.
 
@@ -252,7 +244,7 @@ Harry didn’t like himself when he was angry.
 
 The witch paused, and looked back at him steadily. “And if I say no — that it is too expensive and you won’t need it — then what?”
 
-Harry’s face twisted in bitterness. “Exactly what you're thinking, Professor McGonagall. *Exactly* what you're thinking. I conclude you're another crazy adult I can’t talk to, and I start planning how to get my hands on a healer’s kit anyway.”
+Harry’s face twisted in bitterness. “Exactly what you’re thinking, Professor McGonagall. *Exactly* what you’re thinking. I conclude you’re another crazy adult I can’t talk to, and I start planning how to get my hands on a healer’s kit anyway.”
 
 “I am your guardian on this trip,” Professor McGonagall said with a tinge of danger. “I *will not* allow you to push me around.”
 
@@ -270,7 +262,7 @@ The shop was the same as they had left it, recognisable and unrecognisable items
 
 They broke off and looked at each other, and then the salesgirl laughed a little. “I didn’t mean to get you in trouble with Professor McGonagall,” she said. Her voice lowered conspiratorially. “I hope she wasn’t *too* awful to you.”
 
-“*Della!”* said Professor McGonagall, sounding scandalised.
+*“Della!”* said Professor McGonagall, sounding scandalised.
 
 “Bag of gold,” Harry said to his pouch, and then looked back up at the salesgirl while he counted out five Galleons. “Don’t worry, I understand that she’s only awful to me because she loves me.”
 
@@ -286,7 +278,7 @@ Professor McGonagall pointed toward a shop that looked as if it had been made fr
 
 “Yes,” said Professor McGonagall.
 
-“Then I think emphatically *no.*”
+“Then I think emphatically *no.”*
 
 Professor McGonagall nodded, as though ticking off a point. “Might I ask why not?”
 
@@ -294,7 +286,7 @@ Professor McGonagall nodded, as though ticking off a point. “Might I ask why n
 
 “You don’t think you could take care of a pet?”
 
-“I *could,*” Harry said, “but I would end up obsessing all day long about whether I’d remembered to feed it that day or if it was slowly starving in its cage, wondering where its master was and why there wasn’t any food.”
+“I *could,”* Harry said, “but I would end up obsessing all day long about whether I’d remembered to feed it that day or if it was slowly starving in its cage, wondering where its master was and why there wasn’t any food.”
 
 “That poor owl,” the older witch said in a soft voice. “Abandoned like that. I wonder what it would do.”
 
@@ -304,7 +296,7 @@ The witch went on, still in that soft voice. “And what would happen to it afte
 
 “Excuse me,” Harry said, and he reached up to take Professor McGonagall by the hand, gently but firmly, and steered her into yet another alleyway; after ducking so many well-wishers the process had become almost unnoticeably routine. “Please cast that silencing spell.”
 
-“*Quietus.*”
+*“Quietus.*”
 
 Harry’s voice was shaking. “That owl does *not* represent me, my parents *never* locked me in a cupboard and left me to starve, I do *not* have abandonment fears and I *don’t like the trend of your thoughts, Professor McGonagall!”*
 
@@ -314,7 +306,7 @@ The witch looked down at him gravely. “And what thoughts would those be, Mr. P
 
 “Were you?”
 
-“*No!”* Harry shouted. “No, I never was! Do you think I’m *stupid?* I *know* about the concept of child abuse, I *know* about inappropriate touching and all of that and if anything like that happened I would call the police! And report it to the head teacher! And look up social services in the phone book! And tell Grandpa and Grandma and Mrs. Figg! But my parents *never* did anything like that, never ever *ever!* How *dare* you suggest such a thing!”
+*“No!”* Harry shouted. “No, I never was! Do you think I’m *stupid?* I *know* about the concept of child abuse, I *know* about inappropriate touching and all of that and if anything like that happened I would call the police! And report it to the head teacher! And look up social services in the phone book! And tell Grandpa and Grandma and Mrs. Figg! But my parents *never* did anything like that, never ever *ever!* How *dare* you suggest such a thing!”
 
 The older witch gazed at him steadily. “It is my duty as Deputy Headmistress to investigate possible signs of abuse in the children under my care.”
 
@@ -327,13 +319,13 @@ Harry took a fast step back, and his hand snapped up and knocked hers away.
 
 McGonagall froze, then she pulled her hand back, and took a step backwards. “Harry, it’s all right,” she said. “I believe you.”
 
-“*Do you,*” Harry hissed. The fury still roaring through his blood. “Or are you just waiting to get away from me so you can file the papers?”
+*“Do you,*” Harry hissed. The fury still roaring through his blood. “Or are you just waiting to get away from me so you can file the papers?”
 
 “Harry, I saw your house. I saw you with your parents. They love you. You love them. I do believe you when you say that your parents are not abusing you. But I *had* to ask, because there is something strange at work here.”
 
 Harry stared at her coldly. “Like what?”
 
-“Harry, I’ve seen many abused children in my time at Hogwarts, it would break your heart to know how many. And, when you're happy, you don’t behave like one of those children, not at *all*. You smile at strangers, you hug people, I put my hand on your shoulder and you didn’t flinch. But sometimes, only sometimes, you say or do something that seems *very* much like… someone who spent his first eleven years locked in a cellar. Not the loving family that I saw.” Professor McGonagall tilted her head, her expression growing puzzled again.
+“Harry, I’ve seen many abused children in my time at Hogwarts, it would break your heart to know how many. And, when you’re happy, you don’t behave like one of those children, not at *all*. You smile at strangers, you hug people, I put my hand on your shoulder and you didn’t flinch. But sometimes, only sometimes, you say or do something that seems *very* much like… someone who spent his first eleven years locked in a cellar. Not the loving family that I saw.” Professor McGonagall tilted her head, her expression growing puzzled again.
 
 Harry took this in, processing it. The black rage began to drain away, as it dawned on him that he was being listened to respectfully, and that his family wasn’t in danger.
 
@@ -365,9 +357,9 @@ Harry’s eyebrows rose toward the sky —
 
 “Please do.”
 
-“Children aren’t meant to be too much smarter than their parents,” Harry said. “Or too much saner, maybe — my father could probably outsmart me if he was, you know, actually *trying,* instead of using his adult intelligence mainly to come up with new reasons not to change his mind —” Harry stopped. “I’m too smart, Professor. I’ve got nothing to say to normal children. Adults don’t respect me enough to really talk to me. And frankly, even if they did, they wouldn’t sound as smart as Richard Feynman, so I might as well read something Richard Feynman wrote instead. I’m *isolated*, Professor McGonagall. I’ve been isolated my whole life. Maybe that has some of the same effects as being locked in a cellar. And I’m too intelligent to look up to my parents the way that children are designed to do. My parents love me, but they don’t feel obliged to respond to reason, and sometimes I feel like they're the children — children who *won’t listen* and have absolute authority over my whole existence. I try not to be too bitter about it, but I also try to be *honest* with myself, so, yes, I’m bitter. And I also have an anger management problem, but I’m working on it. That’s all.”
+“Children aren’t meant to be too much smarter than their parents,” Harry said. “Or too much saner, maybe — my father could probably outsmart me if he was, you know, actually *trying,* instead of using his adult intelligence mainly to come up with new reasons not to change his mind —” Harry stopped. “I’m too smart, Professor. I’ve got nothing to say to normal children. Adults don’t respect me enough to really talk to me. And frankly, even if they did, they wouldn’t sound as smart as Richard Feynman, so I might as well read something Richard Feynman wrote instead. I’m *isolated*, Professor McGonagall. I’ve been isolated my whole life. Maybe that has some of the same effects as being locked in a cellar. And I’m too intelligent to look up to my parents the way that children are designed to do. My parents love me, but they don’t feel obliged to respond to reason, and sometimes I feel like they’re the children — children who *won’t listen* and have absolute authority over my whole existence. I try not to be too bitter about it, but I also try to be *honest* with myself, so, yes, I’m bitter. And I also have an anger management problem, but I’m working on it. That’s all.”
 
-“*That’s all?”*
+*“That’s all?”*
 
 Harry nodded firmly. “That’s all. Surely, Professor McGonagall, even in magical Britain, the normal explanation is always worth *considering?”*
 
@@ -397,7 +389,7 @@ His left hand rose and touched his scar.
 
 What… *exactly…*
 
-“You're a full wizard now,” said Professor McGonagall.
+“You’re a full wizard now,” said Professor McGonagall.
 “Congratulations.”
 
 Harry nodded.
@@ -408,7 +400,7 @@ Harry nodded.
 
 Professor McGonagall *ahemmed*. “Really? You don’t say.”
 
-Harry nodded. “Yes. It’s just… *odd.* To find out that you were part of this grand story, the quest to defeat the great and terrible Dark Lord, and it’s already *done.* Finished. Completely over with. Like you're Frodo Baggins and you find out that your parents took you to Mount Doom and had you toss in the Ring when you were one year old and you don’t even remember it.”
+Harry nodded. “Yes. It’s just… *odd.* To find out that you were part of this grand story, the quest to defeat the great and terrible Dark Lord, and it’s already *done.* Finished. Completely over with. Like you’re Frodo Baggins and you find out that your parents took you to Mount Doom and had you toss in the Ring when you were one year old and you don’t even remember it.”
 
 Professor McGonagall’s smile had grown somewhat fixed.
 
@@ -424,7 +416,7 @@ Professor McGonagall’s smile had grown somewhat fixed.
 
 Professor McGonagall blinked. Twice. “Not likely. No one has ever escaped from Azkaban, and I doubt that *he* will be the first.”
 
-Harry was a bit sceptical of that “*no one* has *ever* escaped from Azkaban” line. Still, maybe with magic you could actually get close to a 100% perfect prison, especially if you had a wand and they did not. The best way to get out would be to not go there in the first place.
+Harry was a bit sceptical of that *“no one* has *ever* escaped from Azkaban” line. Still, maybe with magic you could actually get close to a 100% perfect prison, especially if you had a wand and they did not. The best way to get out would be to not go there in the first place.
 
 “All right then,” Harry said. “Sounds like it’s been nicely wrapped up.” He sighed, scrubbing his palm over his head. “Or maybe the Dark Lord didn’t *really* die that night. Not completely. His spirit lingers, whispering to people in nightmares that bleed over into the waking world, searching for a way back into the living lands he swore to destroy, and now, in accordance with the ancient prophecy, he and I are locked in a deadly duel where the winner shall lose and the loser shall win —”
 
@@ -438,7 +430,7 @@ Professor McGonagall looked at Harry with a calm expression. A very, *very* calm
 
 *Aw crap.*
 
-If Harry had needed to formalise the wordless inference that had just flashed into his mind, it would have come out something like, ‘If I estimate the probability of Professor McGonagall doing what I just saw as the result of carefully controlling herself, versus the probability distribution for all the things she would do *naturally* if I made a bad joke, then this behavior is significant evidence for her hiding something.’
+If Harry had needed to formalise the wordless inference that had just flashed into his mind, it would have come out something like, ‘If I estimate the probability of Professor McGonagall doing what I just saw as the result of carefully controlling herself, versus the probability distribution for all the things she would do *naturally* if I made a bad joke, then this behaviour is significant evidence for her hiding something.’
 
 But what Harry actually thought was, *Aw crap.*
 
@@ -464,7 +456,7 @@ Then both of them shut up, as a man in flowing orange robes appeared on the stre
 
 When the orange-robed man had passed into the distance, Harry spoke again, in a low murmur. “Are you going to tell me the truth now, Professor McGonagall? And don’t bother trying to wave it off, I’m not stupid.”
 
-“You're *eleven years old*, Mr. Potter!” she said in a harsh whisper.
+“You’re *eleven years old*, Mr. Potter!” she said in a harsh whisper.
 
 “And therefore subhuman. Sorry… for a moment there, I *forgot*.”
 
@@ -486,7 +478,7 @@ Ah.
 
 McGonagall stopped short in the street. Her eyes blazed and her voice descended into an outright hiss. “How dare you!”
 
-“*How dare you!”* he whispered back at her.
+*“How dare you!”* he whispered back at her.
 
 “You would *blackmail* me?”
 
@@ -504,7 +496,7 @@ So. New information; that was a peace offering. Harry nodded in acceptance, and 
 
 “So now I’ve got to find some way to kill an immortal Dark Wizard,” Harry said, and sighed in frustration. “I really wish you had told me that *before* I started shopping.”
 
-* * * * *
+--------
 
 The trunk shop was more richly appointed than any other shop Harry had visited; the curtains were lush and delicately patterned, the floor and walls of stained and polished wood, and the trunks occupied places of honor on polished ivory platforms. The salesman was dressed in robes of finery only a cut below those of Lucius Malfoy, and spoke with exquisite, oily politeness to both Harry and Professor McGonagall.
 
@@ -532,7 +524,7 @@ The witch turned back and looked at him.
 
 Harry took a deep breath. He needed to be a little angry for what he wanted to try now, there was no way he’d have the courage to do it otherwise. *She didn’t listen to me,* he thought to himself, *I would have taken more gold but she didn’t want to listen…* Focusing his entire world on McGonagall and the need to bend this conversation to his will, he spoke.
 
-“Professor, you thought one hundred Galleons would be more than enough for a trunk. That’s why you didn’t bother warning me before it went down to ninety-seven. Which is just the sort of thing the research studies show — that’s what happens when people think they're leaving themselves a *little* error margin. They're not pessimistic enough. If it’d been up to me, I’d have taken *two hundred* Galleons just to be sure. There was plenty of money in that vault, and I could have put back any extra later. But I thought you wouldn’t let me do it. I thought you’d be angry at me just for asking. Was I wrong?”
+“Professor, you thought one hundred Galleons would be more than enough for a trunk. That’s why you didn’t bother warning me before it went down to ninety-seven. Which is just the sort of thing the research studies show — that’s what happens when people think they’re leaving themselves a *little* error margin. They’re not pessimistic enough. If it’d been up to me, I’d have taken *two hundred* Galleons just to be sure. There was plenty of money in that vault, and I could have put back any extra later. But I thought you wouldn’t let me do it. I thought you’d be angry at me just for asking. Was I wrong?”
 
 “I suppose I must confess that you are right,” said Professor
 McGonagall. “But, young man —”
@@ -545,7 +537,7 @@ The salesman was watching them both with unabashed fascination.
 
 Harry nodded and continued. “So — suppose I had a way to get more Galleons from my vault *without* us going back to Gringotts, but it involved me violating the role of an obedient child. Would I be able to trust you with that, even though you’d have to step outside your own role as Professor McGonagall to take advantage of it?”
 
-“*What?”* said Professor McGonagall.
+*“What?”* said Professor McGonagall.
 
 “To put it another way, if I could make today have happened differently, so that we *didn’t* take too little money with us, would that be all right even though it would involve a child being insolent to an adult in retrospect?”
 
@@ -555,11 +547,11 @@ Harry took out the mokeskin pouch, and said, “Eleven Galleons originally from 
 
 And there was gold in Harry’s hand.
 
-For a moment Professor McGonagall’s mouth gaped wide, then her jaw snapped shut and her eyes narrowed and the witch bit out, “*Where* did you get that —”
+For a moment Professor McGonagall’s mouth gaped wide, then her jaw snapped shut and her eyes narrowed and the witch bit out, *“Where* did you get that —”
 
 “From my family vault, like I said.”
 
-“*How?”*
+*“How?”*
 
 “Magic.”
 
@@ -587,13 +579,13 @@ The salesman, unctuous once more, pointed toward a door set into the wall with a
 
 The slam of the lavatory door cut off his words, and after Harry had identified the lock and pressed it into place, he grabbed the magical self-cleaning towel and, with shaky hands, wiped moisture off his forehead. Harry’s entire body was sheathed in sweat which had soaked clear through his Muggle clothing, though at least it didn’t show through the robes.
 
-* * * * *
+--------
 
 The sun was setting and it was very late indeed, by the time they stood again in the courtyard of the Leaky Cauldron, the silent leaf-dusted interface between magical Britain’s Diagon Alley and the entire Muggle world. (That was one *awfully* decoupled economy…) Harry was to go to a phone box and call his father, once he was on the other side. He didn’t need to worry about his luggage being stolen, apparently. His trunk had the status of a major magical item, something that most Muggles wouldn’t notice; that was part of what you could get in the wizarding world, if you were willing to pay the price of a secondhand car.
 
 “So here we part ways, for a time,” Professor McGonagall said. She shook her head in wonderment. “This has been the strangest day of my life for… many a year. Since the day I learned that a child had defeated You-Know-Who. I wonder now, looking back, if that was the last reasonable day of the world.”
 
-Oh, like *she* had anything to complain about. *You think your day* *was surreal? Try mine.*
+Oh, like *she* had anything to complain about. *You think your day was surreal? Try mine.*
 
 “I was very impressed with you today,” Harry said to her. “I should have remembered to compliment you out loud, I was awarding you points in my head and everything.”
 
@@ -605,7 +597,7 @@ This woman might well be the sanest adult Harry had ever met, despite her lack o
 
 “I’ll see you again soon, when school starts,” Professor McGonagall said. “And, Mr. Potter, about your wand —”
 
-“I know what you're going to ask,” Harry said. He took out his precious wand and, with a deep twinge of inner pain, flipped it over in his hand, presenting her with the handle. “Take it. I hadn’t planned to do anything, not a single thing, but I don’t want you to have nightmares about me blowing up my house.”
+“I know what you’re going to ask,” Harry said. He took out his precious wand and, with a deep twinge of inner pain, flipped it over in his hand, presenting her with the handle. “Take it. I hadn’t planned to do anything, not a single thing, but I don’t want you to have nightmares about me blowing up my house.”
 
 Professor McGonagall shook her head rapidly. “Oh no, Mr. Potter! That isn’t done. I only meant to warn you not to *use* your wand at home, since the Ministry can detect underage magic and it is prohibited without supervision.”
 
