--- a/005.md
+++ b/005.md
@@ -1,4 +1,7 @@
-J. K. Rowling is staring at you. Can you feel her eyes on you? She’s reading your mind using her Rowling Rays.
+> J. K. Rowling is staring at you. Can you feel her eyes on you? She’s reading your mind using her Rowling Rays.
+
+# Chapter 5
+## The Fundamental Attribution Error
 
 --------
 
@@ -12,9 +15,9 @@ J. K. Rowling is staring at you. Can you feel her eyes on you? She’s reading y
 
 The Moke Shop was a quaint little shop (some might even say cute) ensconced behind a vegetable stall that was behind a magical glove shop that was on an alleyway off a side street of Diagon Alley. Disappointingly, the shopkeeper was not a wizened ancient crone; just a nervous-looking young woman wearing faded yellow robes. Right now she was holding out a Moke Super Pouch QX31, whose selling point was that it had a Widening Lip as well as an Undetectable Extension Charm: you could actually fit big things in it, though the total volume was still limited.
 
-Harry had *insisted* on coming here straight away, first thing — insisted as hard as he thought he could without making Professor McGonagall suspicious. Harry had something he needed to put into the pouch as soon as possible. It wasn’t the bag of Galleons that Professor McGonagall had allowed him to withdraw from Gringotts. It was all the other Galleons that Harry had surreptitiously shoved into his pocket after falling into a heap of gold coins. That *had* been a real accident, but Harry was never one to discard an opportunity… though it’d really been more of a spur-of-the-moment thing. Ever since Harry had been awkwardly carrying the allowed bag of Galleons next to his trouser pocket, so that any jingling would seem to come from the right place.
+Harry had *insisted* on coming here straight away, first thing—insisted as hard as he thought he could without making Professor McGonagall suspicious. Harry had something he needed to put into the pouch as soon as possible. It wasn’t the bag of Galleons that Professor McGonagall had allowed him to withdraw from Gringotts. It was all the other Galleons that Harry had surreptitiously shoved into his pocket after falling into a heap of gold coins. That *had* been a real accident, but Harry was never one to discard an opportunity… though it’d really been more of a spur-of-the-moment thing. Ever since Harry had been awkwardly carrying the allowed bag of Galleons next to his trouser pocket, so that any jingling would seem to come from the right place.
 
-This still left the question of how he was actually going to get the *other* coins into the pouch without getting caught. The golden coins might have been his, but they were still stolen — self-stolen? Auto-thieved?
+This still left the question of how he was actually going to get the *other* coins into the pouch without getting caught. The golden coins might have been his, but they were still stolen—self-stolen? Auto-thieved?
 
 Harry looked up from the Moke Super Pouch QX31 on the counter in front of him. “Can I try this for a bit? To make sure it works, um, reliably?” He widened his eyes in an expression of boyish, playful innocence.
 
@@ -36,7 +39,7 @@ And then, unfortunately…
 
 Professor McGonagall had laid a hand on Harry’s shoulder and yanked him into the nearest alleyway the moment she’d heard “Harry Potter?” The old man had followed, but at least it looked like no one else had heard.
 
-Harry considered the question. *Was* he really Harry Potter? “I only know what other people have told me,” Harry said. “It’s not like I remember being born.” His hand brushed his forehead. “I’ve had this scar as long as I remember, and I’ve been told my name was Harry Potter as long as I remember. But,” Harry said thoughtfully, “if there’s already sufficient cause to postulate a conspiracy, there’s no reason why they wouldn’t just find another orphan and raise him to believe that *he* was Harry Potter —"
+Harry considered the question. *Was* he really Harry Potter? “I only know what other people have told me,” Harry said. “It’s not like I remember being born.” His hand brushed his forehead. “I’ve had this scar as long as I remember, and I’ve been told my name was Harry Potter as long as I remember. But,” Harry said thoughtfully, “if there’s already sufficient cause to postulate a conspiracy, there’s no reason why they wouldn’t just find another orphan and raise him to believe that *he* was Harry Potter—”
 
 Professor McGonagall drew her hand over her face in exasperation. “You look just about exactly like your father, James, the year he first attended Hogwarts. And I can attest on the basis of *personality alone* that you are related to the Scourge of Gryffindor.”
 
@@ -44,7 +47,7 @@ Professor McGonagall drew her hand over her face in exasperation. “You look ju
 
 “No,” quavered the old man. “She’s right. You have your mother’s eyes.”
 
-“Hmm,” Harry frowned. “I suppose *you* could be in on it too —"
+“Hmm,” Harry frowned. “I suppose *you* could be in on it too—”
 
 “Enough, Mr. Potter.”
 
@@ -114,7 +117,7 @@ Harry could predict where this conversation was about to go, and he decided in a
 
 “Draco Malfoy,” said Draco Malfoy, looking slightly puzzled.
 
-“It *is* you! Draco Malfoy. I — I never thought I’d be so honoured, sir.” Harry wished he could make tears come out of his eyes. The others usually started crying at around this point.
+“It *is* you! Draco Malfoy. I—I never thought I’d be so honoured, sir.” Harry wished he could make tears come out of his eyes. The others usually started crying at around this point.
 
 “Oh,” said Draco, sounding a little confused. Then his lips stretched in a smug smile. “It’s good to meet someone who knows his place.”
 
@@ -126,7 +129,7 @@ Oops. That last part might have sounded a little odd, like he was flirting with 
 
 “And *I* am pleased to learn that I shall be treated with the respect due to the family of Malfoy,” the other boy lobbed back, accompanied by a smile such as the highest of kings might bestow upon the least of his subjects, if that subject were honest, though poor.
 
-Eh… Damn, Harry was having trouble thinking up his next line. Well, everyone *did* want to shake the hand of Harry Potter, so — “When my clothes are fitted, sir, might you deign to shake my hand? I should wish nothing more to put the capper upon this day, nay, this month, indeed, my whole lifetime.”
+Eh… Damn, Harry was having trouble thinking up his next line. Well, everyone *did* want to shake the hand of Harry Potter, so—“When my clothes are fitted, sir, might you deign to shake my hand? I should wish nothing more to put the capper upon this day, nay, this month, indeed, my whole lifetime.”
 
 The white-blonde-haired boy glared in return. “And what have *you* done for the Malfoys that entitles you to such a favour?”
 
@@ -136,19 +139,19 @@ The white-blonde-haired boy glared in return. “And what have *you* done for th
 
 Harry grinned sheepishly. “Professor McGonagall says that I’m the most Ravenclaw person she’s ever seen or heard tell of in legend, so much so that Rowena herself would tell me to get out more, whatever *that* means, and that I’ll undoubtedly end up in Ravenclaw House if the hat isn’t screaming too loudly for the rest of us to make out any words, end quote.”
 
-“Wow,” said Draco Malfoy, sounding slightly impressed. The boy gave a sort of wistful sigh. “Your flattery was great, or I thought so, anyway — you’d do well in Slytherin House, too. Usually it’s only my father who gets that sort of grovelling. I’m *hoping* the other Slytherins will suck up to me now I’m at Hogwarts… I guess this is a good sign, then.”
+“Wow,” said Draco Malfoy, sounding slightly impressed. The boy gave a sort of wistful sigh. “Your flattery was great, or I thought so, anyway—you’d do well in Slytherin House, too. Usually it’s only my father who gets that sort of grovelling. I’m *hoping* the other Slytherins will suck up to me now I’m at Hogwarts… I guess this is a good sign, then.”
 
 Harry coughed. “Actually, sorry, I’ve got no idea who you are really.”
 
-” *Oh come on!*” the boy said with fierce disappointment. “Why’d you go and do that, then?” Draco’s eyes widened with sudden suspicion. “And how do you *not* know about the Malfoys? And what are those *clothes* you’re wearing? Are your parents *Muggles?* "
+” *Oh come on!*” the boy said with fierce disappointment. “Why’d you go and do that, then?” Draco’s eyes widened with sudden suspicion. “And how do you *not* know about the Malfoys? And what are those *clothes* you’re wearing? Are your parents *Muggles?*”
 
-“Two of my parents are dead,” Harry said. His heart twinged. When he put it that way — “My other two parents are Muggles, and they’re the ones that raised me.”
+“Two of my parents are dead,” Harry said. His heart twinged. When he put it that way—“My other two parents are Muggles, and they’re the ones that raised me.”
 
 “*What?*” said Draco. “Who *are* you?”
 
 “Harry Potter, pleased to meet you.”
 
-“*Harry Potter?*” gasped Draco. “*The* Harry —” and the boy cut off abruptly.
+“*Harry Potter?*” gasped Draco. “*The* Harry—” and the boy cut off abruptly.
 
 There was a brief silence.
 
@@ -166,7 +169,7 @@ Draco’s attendant emitted a sound like she was strangling but kept on with her
 
 “Burst into flames and die.”
 
-“But you’re Harry Potter, the glorious saviour of the wizarding world! Everyone’s hero, Harry Potter! I’ve always wanted to be just like you when I grow up so I can —"
+“But you’re Harry Potter, the glorious saviour of the wizarding world! Everyone’s hero, Harry Potter! I’ve always wanted to be just like you when I grow up so I can—”
 
 Draco cut off the words in mid-sentence, his face freezing in absolute horror.
 
@@ -174,7 +177,7 @@ Tall, white-haired, coldly elegant in black robes of the finest quality. One han
 
 That was the man who had, just that moment, strolled in through the open door.
 
-“Draco,” said the man, low and very angry, “*what* are you *saying?* "
+“Draco,” said the man, low and very angry, “*what* are you *saying?*”
 
 In one split second of sympathetic panic, Harry formulated a rescue plan.
 
@@ -188,13 +191,13 @@ Coolly murderous eyes regarded him. “Harry Potter.”
 
 The dark eyes widened, shocked surprise replacing deadly threat.
 
-“Your son has been telling me *all* about you,” Harry gushed on, hardly even knowing what was coming out of his mouth but just talking as fast as possible. “But of course I knew about you all before then, everyone knows about you, the great Lucius Malfoy! The most honoured laureate of all the House of Slytherin, I’ve been thinking about trying to get into Slytherin House myself just because I heard you were in it as a child —"
+“Your son has been telling me *all* about you,” Harry gushed on, hardly even knowing what was coming out of his mouth but just talking as fast as possible. “But of course I knew about you all before then, everyone knows about you, the great Lucius Malfoy! The most honoured laureate of all the House of Slytherin, I’ve been thinking about trying to get into Slytherin House myself just because I heard you were in it as a child—”
 
 *“What are you saying, Mr. Potter?*” came a near-scream from outside the shop, and Professor McGonagall burst in a second later.
 
 There was such pure horror on her face that Harry’s mouth opened automatically, and then blocked on nothing-to-say.
 
-“Professor McGonagall!” cried Draco. “Is it really you? I’ve heard so much about you from my father, I’ve been thinking of trying to get Sorted into Gryffindor so I can —"
+“Professor McGonagall!” cried Draco. “Is it really you? I’ve heard so much about you from my father, I’ve been thinking of trying to get Sorted into Gryffindor so I can—”
 
 *“What?*” bellowed Lucius Malfoy and Professor McGonagall in perfect unison, standing side-by-side. Their heads swivelled to look at each other in duplicate motions, and then the two recoiled from one another as though performing a synchronised dance.
 
@@ -214,9 +217,9 @@ Professor McGonagall slowly turned to look at Harry, her expression chilly. “I
 
 “I was only joking around,” Harry protested, as the sounds of hysterical laughter went on nearby.
 
-*“Draco Malfoy said in front of his father that he wanted to be sorted into Gryffindor!* Joking around *isn’t enough* to *do* that!” Professor McGonagall paused, visibly taking breaths. “What part of ‘get fitted for robes’ sounded to you like *please cast a Confundus Charm on the entire universe!* "
+*“Draco Malfoy said in front of his father that he wanted to be sorted into Gryffindor!* Joking around *isn’t enough* to *do* that!” Professor McGonagall paused, visibly taking breaths. “What part of ‘get fitted for robes’ sounded to you like *please cast a Confundus Charm on the entire universe!*”
 
-“He was in a situational context where those actions made internal sense —"
+“He was in a situational context where those actions made internal sense—”
 
 “No. Don’t explain. I don’t want to know what happened in here, ever. Whatever dark power inhabits you, it is *contagious,* and I don’t want to end up like poor Draco Malfoy, poor Madam Malkin and her two poor assistants.”
 
