--- a/003.md
+++ b/003.md
@@ -1,26 +1,29 @@
-If J. K. Rowling asks you about this story, you know nothing.
+> If J. K. Rowling asks you about this story, you know nothing.
+
+# Chapter 3
+## Comparing Reality To Its Alternatives
 
 --------
 
-*“But then the question is — who?”*
+*“But then the question is—who?”*
 
 --------
 
-“Good Lord,” said the barman, peering at Harry, “is this — can this be —?”
+“Good Lord,” said the barman, peering at Harry, “is this—can this be—?”
 
 Harry leaned towards the bar of the Leaky Cauldron as best he could, though it came up to somewhere around the tips of his eyebrows. A question like *that* deserved his very best.
 
-“Am I — could I be — maybe — you never know — if I'm *not* — but then the question is — *who?”*
+“Am I—could I be—maybe—you never know—if I’m *not*—but then the question is—*who?”*
 
 “Bless my soul,” whispered the old barman. “Harry Potter… what an honour.”
 
-Harry blinked, then rallied. “Well, yes, you’re quite perceptive; most people don’t realise that so quickly —”
+Harry blinked, then rallied. “Well, yes, you’re quite perceptive; most people don’t realise that so quickly—”
 
 “That’s enough,” Professor McGonagall said. Her hand tightened on Harry’s shoulder. “Don’t pester the boy, Tom, he’s new to all this.”
 
 “But it is him?” quavered an old woman. “It’s Harry Potter?” With a scraping sound, she got up from her chair.
 
-“Doris —” McGonagall said warningly. The glare she shot around the room should have been enough to intimidate anyone.
+“Doris—” McGonagall said warningly. The glare she shot around the room should have been enough to intimidate anyone.
 
 “I only want to shake his hand,” the woman whispered. She bent low and stuck out a wrinkled hand, which Harry, feeling confused and more uncomfortable than he ever had in his life, carefully shook. Tears fell from the woman’s eyes onto their clasped hands. “My granson was an Auror,” she whispered to him. “Died in seventy-nine. Thank you, Harry Potter. Thank heavens for you.”
 
@@ -44,7 +47,7 @@ Harry returned a steady look. “My parents are alive and well, and they always 
 
 “An admirable loyalty,” said Professor McGonagall. Her voice went low. “Though it hurts a little to hear you say it like that. Lily and James were friends of mine.”
 
-Harry looked away, suddenly ashamed. “I'm sorry,” he said in a small voice. “But I *have* a Mum and Dad. And I know that I’d just make myself unhappy by comparing that reality to… something perfect that I built up in my imagination.”
+Harry looked away, suddenly ashamed. “I’m sorry,” he said in a small voice. “But I *have* a Mum and Dad. And I know that I’d just make myself unhappy by comparing that reality to… something perfect that I built up in my imagination.”
 
 “That is amazingly wise of you,” Professor McGonagall said quietly. “But your *genetic* parents died very well indeed, protecting you.”
 
@@ -68,7 +71,7 @@ Then Harry spotted something that made him, entirely without thinking, veer off 
 
 “Mr. Potter?” she said.
 
-Harry blinked, then realised what he’d just done. “I'm sorry! I forgot for a moment that I was with you instead of my family.” Harry gestured at the shop window, which displayed fiery letters that shone piercingly bright and yet remote, spelling out *Bigbam’s Brilliant Books.* “When you walk past a bookshop you haven’t visited before, you have to go in and look around. That’s the family rule.”
+Harry blinked, then realised what he’d just done. “I’m sorry! I forgot for a moment that I was with you instead of my family.” Harry gestured at the shop window, which displayed fiery letters that shone piercingly bright and yet remote, spelling out *Bigbam’s Brilliant Books.* “When you walk past a bookshop you haven’t visited before, you have to go in and look around. That’s the family rule.”
 
 “That is the most Ravenclaw thing I have ever heard.”
 
@@ -80,7 +83,7 @@ Harry nodded, and they walked on.
 
 “Don’t get me wrong, it’s a *great* distraction,” Harry said as his head kept swivelling, “probably the best distraction anyone has ever tried on me, but don’t think I’ve forgotten about our pending discussion.”
 
-Professor McGonagall sighed. “Your parents — or your mother at any rate — may have been very wise not to tell you.”
+Professor McGonagall sighed. “Your parents—or your mother at any rate—may have been very wise not to tell you.”
 
 “So you wish that I could continue in blissful ignorance? There is a certain flaw in that plan, Professor McGonagall.”
 
@@ -102,7 +105,7 @@ Until the names of James and Lily Potter rose to the top of that list.
 
 And those two might have died with their wands in their hands and not regretted their choices, for they *were* heroes; but for that they had an infant child, their son, Harry Potter.
 
-Tears were coming into Harry’s eyes. He wiped them away in anger or maybe desperation, *I didn’t know those people, not really, they aren’t my parents* now, *it would be pointless to feel so sad for them —*
+Tears were coming into Harry’s eyes. He wiped them away in anger or maybe desperation, *I didn’t know those people, not really, they aren’t my parents* now, *it would be pointless to feel so sad for them—*
 
 When Harry was done sobbing into the witch’s robes, he looked up, and felt a little bit better to see tears in Professor McGonagall’s eyes as well.
 
@@ -114,7 +117,7 @@ The storm of weeping that had washed through Harry had used up all his tears; he
 
 (And somewhere in the back of his mind was a small, small note of confusion, a sense of something wrong about that story; and it should have been a part of Harry’s art to notice that tiny note, but he was distracted. For it is a sad rule that whenever you are most in need of your art as a rationalist, that is when you are most likely to forget it.)
 
-Harry detached himself from Professor McGonagall’s side. “I’ll — have to think about this,” he said, trying to keep his voice under control. He stared at his shoes. “Um. You can go ahead and call them my parents, if you want, you don’t have to say ‘genetic parents’ or anything. I guess there’s no reason I can’t have two mothers and two fathers.”
+Harry detached himself from Professor McGonagall’s side. “I’ll—have to think about this,” he said, trying to keep his voice under control. He stared at his shoes. “Um. You can go ahead and call them my parents, if you want, you don’t have to say ‘genetic parents’ or anything. I guess there’s no reason I can’t have two mothers and two fathers.”
 
 There was no sound from Professor McGonagall.
 
