--- a/004.md
+++ b/004.md
@@ -1,6 +1,9 @@
-Disclaimer: J. K. Rowling is watching you from where she waits, eternally in the void between worlds.
+> Disclaimer: J. K. Rowling is watching you from where she waits, eternally in the void between worlds.
 
-A/N: As others have noted, the novels seem inconsistent in the apparent purchasing power of a Galleon; I'm picking a consistent value and sticking with it. Five pounds sterling to the Galleon doesn’t square with seven Galleons for a wand and children using hand-me-down wands.
+A/N: As others have noted, the novels seem inconsistent in the apparent purchasing power of a Galleon; I’m picking a consistent value and sticking with it. Five pounds sterling to the Galleon doesn’t square with seven Galleons for a wand and children using hand-me-down wands.
+
+# Chapter 4
+## The Efficient Market Hypothesis
 
 --------
 
@@ -18,7 +21,7 @@ From just outside the door of the vault, Professor McGonagall watched him, seemi
 
 “What?” hissed the goblin Griphook, who was waiting near the door. “Are you questioning the integrity of Gringotts, Mr. Potter-Evans-Verres?”
 
-“No,” said Harry absently, “not at all, sorry if that came out wrong, sir. I just have no idea at all how your financial system works. I'm asking if Galleons in general are made of pure gold.”
+“No,” said Harry absently, “not at all, sorry if that came out wrong, sir. I just have no idea at all how your financial system works. I’m asking if Galleons in general are made of pure gold.”
 
 “Of course,” said Griphook.
 
@@ -62,7 +65,7 @@ Harry stumped forward, and began picking up gold coins with one hand and dumping
 
 When he had reached twenty, Professor McGonagall coughed. “I think that will be more than enough to pay for your school supplies, Mr. Potter.”
 
-“Hm?” Harry said, his mind elsewhere. “Hold on, I'm doing a Fermi calculation.”
+“Hm?” Harry said, his mind elsewhere. “Hold on, I’m doing a Fermi calculation.”
 
 “A *what?”* said Professor McGonagall, sounding somewhat alarmed.
 
@@ -80,7 +83,7 @@ Professor McGonagall shook her head. “Your father was the last heir of an old 
 
 “Interesting…” Harry said slowly. “So some of this really is, in a sense, mine. That is, earned by me. Sort of. Possibly. Even if I don’t remember the occasion.” Harry’s fingers tapped against his trouser-leg. “That makes me feel less guilty about spending *a very tiny fraction of it! Don’t panic, Professor McGonagall!”*
 
-“Mr. Potter! You are a minor, and as such, you will only be allowed to make *reasonable* withdrawals from —"
+“Mr. Potter! You are a minor, and as such, you will only be allowed to make *reasonable* withdrawals from—”
 
 “I am *all about* reasonable! I am totally on board with fiscal prudence and impulse control! But I *did* see some things on the way here which would constitute *sensible, grown-up* purchases…”
 
@@ -92,19 +95,19 @@ Harry locked gazes with Professor McGonagall, engaging in a silent staring conte
 
 Professor McGonagall’s face grew stern. “Those are *very* expensive, Mr. Potter!”
 
-“Yes, but —” Harry pleaded. “I'm sure that when I'm an adult I’ll want one. And I *can* afford one. Logically, it would make just as much sense to buy it now instead of later, and get the use of it right away. It’s the same money either way, right? I mean, I *would* want a good one, with *lots* of room inside, good enough that I wouldn’t have to just get a better one later…” Harry trailed off hopefully.
+“Yes, but—” Harry pleaded. “I’m sure that when I’m an adult I’ll want one. And I *can* afford one. Logically, it would make just as much sense to buy it now instead of later, and get the use of it right away. It’s the same money either way, right? I mean, I *would* want a good one, with *lots* of room inside, good enough that I wouldn’t have to just get a better one later…” Harry trailed off hopefully.
 
-Professor McGonagall’s gaze didn’t waver. “And just what would you *keep* in a trunk like that, Mr. Potter —"
+Professor McGonagall’s gaze didn’t waver. “And just what would you *keep* in a trunk like that, Mr. Potter—”
 
 “Books.”
 
 “Of course,” sighed Professor McGonagall.
 
-“You should have told me *much earlier* that sort of magic item existed! And that I could afford one! Now my father and I are going to have to spend the next two days *frantically* hitting up all the secondhand bookshops for old textbooks, so I can have a decent science library with me at Hogwarts — and maybe a small science fiction collection, if I can assemble something decent out of the bargain bins. Or better yet, I’ll make the deal a little sweeter for you, okay? Just let me buy —"
+“You should have told me *much earlier* that sort of magic item existed! And that I could afford one! Now my father and I are going to have to spend the next two days *frantically* hitting up all the secondhand bookshops for old textbooks, so I can have a decent science library with me at Hogwarts—and maybe a small science fiction collection, if I can assemble something decent out of the bargain bins. Or better yet, I’ll make the deal a little sweeter for you, okay? Just let me buy—”
 
 *“Mr. Potter!* You think you can *bribe* me?”
 
-“What? *No!* Not like that! I'm saying, Hogwarts can keep some of the books I bring, if you think that any of them would make good additions to the library. I'm going to be getting them cheap, and *I* just want to have them around somewhere or other. It’s okay to bribe people with *books,* right? That’s a —"
+“What? *No!* Not like that! I’m saying, Hogwarts can keep some of the books I bring, if you think that any of them would make good additions to the library. I’m going to be getting them cheap, and *I* just want to have them around somewhere or other. It’s okay to bribe people with *books,* right? That’s a—”
 
 “Family tradition.”
 
@@ -114,7 +117,7 @@ Professor McGonagall’s body seemed to slump, the shoulders lowering within her
 
 “That’s the spirit! And does a ‘mokeskin pouch’ do what I think it does?”
 
-“It can’t do as much as a trunk,” the witch said with visible reluctance, “but… a mokeskin pouch with a Retrieval Charm and Undetectable Extension Charm can hold a number of items until they are called forth by the one who emplaced them —"
+“It can’t do as much as a trunk,” the witch said with visible reluctance, “but… a mokeskin pouch with a Retrieval Charm and Undetectable Extension Charm can hold a number of items until they are called forth by the one who emplaced them—”
 
 “Yes! I definitely need one of those too! It would be like the super beltpack of ultimate awesomeness! Batman’s utility belt of holding! Never mind my swiss army knife, I could carry a whole tool set in there! Or *books!* I could have the top three books I was reading on me at all times, and just pull one out anywhere! I’ll never have to waste another minute of my life! What do you say, Professor McGonagall? It’s for the sake of children’s reading, the best of all possible causes.”
 
@@ -126,7 +129,7 @@ Griphook was favouring Harry with a gaze of frank respect, possibly even outrigh
 
 *“Don’t push it, Mr. Potter.”*
 
-“But oh, Professor McGonagall, why rain on my parade? Surely this is a *happy* day, when I discover all things wizarding for the first time! Why act the part of the grumpy grownup when instead you could smile and remember your own innocent childhood, watching the look of delight upon my young face as I buy a few toys using an insignificant fraction of the wealth that I earned by defeating the most terrible wizard Britain has ever known, not that I'm accusing you of being ungrateful or anything, but still, what are a few toys compared to that?”
+“But oh, Professor McGonagall, why rain on my parade? Surely this is a *happy* day, when I discover all things wizarding for the first time! Why act the part of the grumpy grownup when instead you could smile and remember your own innocent childhood, watching the look of delight upon my young face as I buy a few toys using an insignificant fraction of the wealth that I earned by defeating the most terrible wizard Britain has ever known, not that I’m accusing you of being ungrateful or anything, but still, what are a few toys compared to that?”
 
 *“You,*” growled Professor McGonagall. There was a look on her face so fearsome and terrible that Harry squeaked and stepped back, knocking over a pile of gold coins with a great jingling noise and sprawling backwards into a heap of money. Griphook sighed and put a palm over his face. “I would be doing a great service to wizarding Britain, Mr. Potter, if I locked you in this vault and left you here.”
 
