Cleanup on Author’s Notes and addition of chapters 12 and 13.

--- a/003.md
+++ b/003.md
@@ -1,4 +1,4 @@
-> If J. K. Rowling asks you about this story, you know nothing.
+###### If J. K. Rowling asks you about this story, you know nothing.
 
 # Chapter 3
 ## Comparing Reality To Its Alternatives
