--- a/004.md
+++ b/004.md
@@ -1,6 +1,6 @@
-> Disclaimer: J. K. Rowling is watching you from where she waits, eternally in the void between worlds.
+###### Disclaimer: J. K. Rowling is watching you from where she waits, eternally in the void between worlds.
 
-A/N: As others have noted, the novels seem inconsistent in the apparent purchasing power of a Galleon; I’m picking a consistent value and sticking with it. Five pounds sterling to the Galleon doesn’t square with seven Galleons for a wand and children using hand-me-down wands.
+> A/N: As others have noted, the novels seem inconsistent in the apparent purchasing power of a Galleon; I’m picking a consistent value and sticking with it. Five pounds sterling to the Galleon doesn’t square with seven Galleons for a wand and children using hand-me-down wands.
 
 # Chapter 4
 ## The Efficient Market Hypothesis
