--- a/011.md
+++ b/011.md
@@ -1,13 +1,13 @@
-> Hail the Dark Lord Rowling.
+###### Hail the Dark Lord Rowling.
 
-“Omake” is a non-canonical extra.
+> “Omake” is a non-canonical extra.
 
 # Chapter 11
 ## Omake Files 1, 2, 3
 
 * * * * *
 
-OMAKE FILES #1: 72 Hours to Victory
+### OMAKE FILES #1: 72 Hours to Victory
 
 (A.K.A. “What Happens If You Change Harry But Leave All Other Characters Constant”)
 
@@ -17,13 +17,11 @@ Harry James Potter-Evans-Verres leaned forward in his chair, smiling grimly. “
 
 * * * * *
 
-OMAKE FILES #2: I Ain’t Afraid of Dark Lords
+### OMAKE FILES #2: I Ain’t Afraid of Dark Lords
 
-This was the original version of Chapter 9. It was replaced because—while many readers did enjoy it—many other readers had *massive* allergies to songs in fanfics, for reasons that should not much need belaboring. I didn’t want to drive readers away before they got to Ch. 10.
+> This was the original version of Chapter 9. It was replaced because—while many readers did enjoy it—many other readers had *massive* allergies to songs in fanfics, for reasons that should not much need belaboring. I didn’t want to drive readers away before they got to Ch. 10.
 
-Lee Jordan is the fellow prankster of Fred and George (in canon). “Lee Jordan” 
-
-had sounded like a Muggleborn name to me, implying that he would be capable of instructing Fred and George on a tune that Harry would know. This was not as obvious to some readers as it was to your author.
+> Lee Jordan is the fellow prankster of Fred and George (in canon). “Lee Jordan” had sounded like a Muggleborn name to me, implying that he would be capable of instructing Fred and George on a tune that Harry would know. This was not as obvious to some readers as it was to your author.
 
 * * * * *
 
@@ -136,9 +134,9 @@ Harry took his last steps toward the Sorting Hat as the music ended. He swept a 
 
 * * * * *
 
-OMAKE FILES #3: Alternate Endings of ‘self-Awareness’
+### OMAKE FILES #3: Alternate Endings of ‘self-Awareness’
 
-The offer to tell the whole plot to anyone who guessed what ‘has never happened before’ spurred a *lot* of interesting attempts. The first omake below is taken directly from my personal favorite answer, by Meteoricshipyards. The second is based on Kazuma’s suggestion for what “has never happened before”, the third on a combination of yoyoente and dougal74, the fourth on wolf550e’s review of chapter 10. The one that starts with ‘K’, and the one just above that, are from DarkHeart81. The others are my own. Anyone who wants to pick up one of my own ideas and run with them, particularly the last one, is welcome to do so. And before I get 100 indignant complaints, yes, I am well aware that the legislative body of the UK is the House of Commons in Parliament.
+> The offer to tell the whole plot to anyone who guessed what ‘has never happened before’ spurred a *lot* of interesting attempts. The first omake below is taken directly from my personal favorite answer, by Meteoricshipyards. The second is based on Kazuma’s suggestion for what “has never happened before”, the third on a combination of yoyoente and dougal74, the fourth on wolf550e’s review of chapter 10. The one that starts with ‘K’, and the one just above that, are from DarkHeart81. The others are my own. Anyone who wants to pick up one of my own ideas and run with them, particularly the last one, is welcome to do so. And before I get 100 indignant complaints, yes, I am well aware that the legislative body of the UK is the House of Commons in Parliament.
 
 * * * * *
 
@@ -242,7 +240,7 @@ After that it didn’t take long—
 
 *“And a girl under those clothes.”*
 
-*BUT WE’ve NEVER HAD SEX, YOU IDIOT!*
+*BUT WE’VE NEVER HAD SEX, YOU IDIOT!*
 
 *“SHE OBLIVIATED YOU AFTER THE RAPE, MORON!”*
 
