--- a/006.md
+++ b/006.md
@@ -1,4 +1,4 @@
-> Blah blah disclaimer blah blah Rowling blah blah ownership.
+###### Blah blah disclaimer blah blah Rowling blah blah ownership.
 
 A/N: The “Aftermath” section of this chapter is part of the story, *not* omake.
 
