--- a/007.md
+++ b/007.md
@@ -419,8 +419,8 @@ No, he could afford to be a *little* patient. But honestly, Harry didn’t see 
 
 “Anyway, let’s sit down,” Harry said. He prepared to swig another drink and started towards the distant seating area, which put him at the right angle to glance back and see the portion of the stall’s newspaper stand that was devoted to a newspaper called *The Quibbler*, which was showing the following headline:
 
-> *BOY-WHO-LIVED GETS*
-> *DRACO MALFOY PREGNANT*
+##### *BOY-WHO-LIVED GETS*
+##### *DRACO MALFOY PREGNANT*
 
 ”*Gah!*” screamed Draco as bright green liquid sprayed all over him from Harry’s direction. Draco turned to Harry with fire in his eyes and grabbed his own can. “You son of a mudblood! Let’s see how *you* like being spat upon!” Draco took a deliberate swig from the can just as his own eyes caught sight of the headline.
 
@@ -430,8 +430,8 @@ Harry stared at the can in his hand even as he went on choking and spluttering 
 
 Then he looked up and stared at the newspaper headline.
 
-> *BOY-WHO-LIVED GETS*
-> *DRACO MALFOY PREGNANT*
+##### *BOY-WHO-LIVED GETS*
+##### *DRACO MALFOY PREGNANT*
 
 Harry’s lips opened and said, “buh-bluh-buh-buh…”
 
