--- a/008.md
+++ b/008.md
@@ -1,8 +1,8 @@
-> All these worlds are J. K. Rowling’s, except Europa. Attempt no fanfics there.
+###### All these worlds are J. K. Rowling’s, except Europa. Attempt no fanfics there.
 
 * * * * *
 
-One alert reviewer asked whether, if Luna is a seer, that means this is going to be an HPDM bottom!Draco mpreg fic. I regret that FFN does not allow me any larger font size in which to say **NO**. It honestly hadn’t occurred to me that Luna might be a *real* seer—I’ll have to decide whether to run with that or not—but I think we can all safely assume that if Luna *is* a seer, she said something about “light planting a seed in darkness”, and Xenophilius, as always, interpreted this in rather the wrong way.
+> One alert reviewer asked whether, if Luna is a seer, that means this is going to be an HPDM bottom!Draco mpreg fic. I regret that FFN does not allow me any larger font size in which to say **NO**. It honestly hadn’t occurred to me that Luna might be a *real* seer—I’ll have to decide whether to run with that or not—but I think we can all safely assume that if Luna *is* a seer, she said something about “light planting a seed in darkness”, and Xenophilius, as always, interpreted this in rather the wrong way.
 
 # Chapter 8
 ## Positive Bias
