--- a/010.md
+++ b/010.md
@@ -1,10 +1,10 @@
-> All your base are still belong to Rowling.
+###### All your base are still belong to Rowling.
 
 * * * * *
 
-And now you will sit through the Sorting Hat singing its version of Evanescence’s “My Immortal”, which has never happened before.
+> And now you will sit through the Sorting Hat singing its version of Evanescence’s “My Immortal”, which has never happened before.
 
-just kidding
+> just kidding
 
 * * * * *
 
